main: prefer xcb on wayland to work around performance issues

The painter backend on wayland does memcpy for the whole drawing area
all the time regardless of checking the real damaged area, which makes
the performance significantly worse compared to xcb.

See https://github.com/qt/qtwayland/blob/92ba57d7ceca3d9d072ee121ab44eff17637cbec/src/client/qwaylandshmbackingstore.cpp#L265

BUG: 450139